# OZ_Django

./: .gitignore  .gitingore
blog/: django_fields.md  pyproject.toml
blog/blog/: admin.py  cb_views.py  fbv_urls.py  forms.py  models.py  urls.py  views.py
blog/blog/migrations/: 0001_initial.py  0002_alter_blog_options_blog_author.py  0003_alter_blog_category.py  0004_comment.py  0005_alter_comment_options.py  0006_blog_image.py  0007_blog_thumbnail.py
blog/config/: settings.py  urls.py
blog/member/: views.py
blog/templates/: about.html  base.html  blog_create.html  blog_detail.html  blog_form.html  blog_list.html  blog_update.html  form-js.html  pagination.html  test_get.html  test_post.html
blog/templates/registration/: login.html  signup.html
blog/utils/: models.py
bookmark/: pyproject.toml
bookmark/bookmark/: admin.py  models.py  views.py
bookmark/bookmark/migrations/: 0001_initial.py
bookmark/config/: settings.py  urls.py
bookmark/templates/: book_detail.html  book_list.html  bookmark_detail.html  bookmark_list.html  gugu.html  movie.html  movies.html
pystagram/: .gitignore  .python-version  EC2 배포 설정.md  pyproject.toml
pystagram/config/: prod.py  settings.py  storage_backends.py  urls.py
pystagram/member/: admin.py  forms.py  models.py  oauth_urls.py  oauth_views.py  urls.py  views.py
pystagram/member/migrations/: 0001_initial.py  0002_userfollowing_user_following.py  0003_alter_userfollowing_unique_together.py
pystagram/post/: admin.py  comment_urls.py  comment_views.py  forms.py  models.py  views.py
pystagram/post/migrations/: 0001_initial.py  0002_alter_postimage_post_comment_tag.py  0003_alter_tag_tag.py  0004_like.py
pystagram/post/templatetags/: custom_tag.py
pystagram/static/css/: style.css
pystagram/static/waypoints/: jquery.waypoints.min.js
pystagram/templates/: base.html
pystagram/templates/auth/: email_verified_done.html  login.html  nickname.html  not_verified.html  signup.html  signup_done.html
pystagram/templates/include/: form.html  search_form.html
pystagram/templates/post/: form.html  list.html
pystagram/templates/profile/: detail.html
pystagram/templates/search/: search.html  search_tag.html  (+1 more)
pystagram/utils/: email.py  forms.py  models.py
rest-blog/: .gitignore  README.md  pyproject.toml  requirements.txt
rest-blog/blog/: admin.py  models.py  serializers.py  urls.py
rest-blog/config/: local.py  prod.py  schema.py  settings.py  urls.py
rest-blog/user/: serializers.py  views.py
rest-blog/utils/: jwt_serializers.py  models.py  permissions.py
(+13 files in other folders)
