[tool.poetry]
name = "blog"
version = "0.1.0"
description = ""
authors = ["isaccchoi <isaccchoi5@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = ">=5.0,<6.0"
ipython = "^8.23.0"
django-extensions = "^3.2.3"
django-summernote = "^0.8.20.0"
pillow = "^10.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
