[tool.poetry]
name = "pystagram"
version = "0.1.0"
description = ""
authors = ["isaccchoi <isaccchoi5@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.4"
django-extensions = "^3.2.3"
ipython = "^8.24.0"
pillow = "^10.3.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
