[tool.poetry]
name = "rest-blog"
version = "0.1.0"
description = ""
authors = ["isaccchoi <isaccchoi5@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.4"
djangorestframework = "^3.15.1"
django-extensions = "^3.2.3"
ipython = "^8.24.0"
djangorestframework-simplejwt = "^5.3.1"
drf-yasg = "^1.21.7"
setuptools = "^70.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
